fixed issue #1 adding new CSS rules to prevent cell content wrapping

--- a/src/backgrid-responsiveGrid.css
+++ b/src/backgrid-responsiveGrid.css
@@ -6,6 +6,11 @@
   overflow-y: auto;
 }
 
+/* force cell content to not wrap */
+.grid-responsive-wrapper th,.grid-responsive-wrapper td, .grid-responsive-wrapper th a {
+    white-space: nowrap;
+}
+
 /* enable horizontal scrolling on the non-pinned grid */
 
 .grid-scrollable {
